fixed stretched image and gamehistory component added

--- a/frontend/app/src/assets/style/global.css
+++ b/frontend/app/src/assets/style/global.css
@@ -155,3 +155,20 @@ a:hover {
 li {
   list-style: none;
 }
+
+/* scroll bar styling */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--box-background-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background: #2b2929b6;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #2b2929;
+}
